--- a/kadai_015/style.css
+++ b/kadai_015/style.css
@@ -23,8 +23,8 @@ div > p{
 }
 h1 {
   font-family: 'Josefin Sans', sans-serif;
-  font-size: 2em;
-  letter-spacing: 2em;
+  font-size: 2rem;
+  letter-spacing: 1.2em;
   text-shadow: 1px 1px 2px gray;
   border-bottom: solid 3px rgb(115,115,114)
 }
