--- a/kadai_018/style.css
+++ b/kadai_018/style.css
@@ -2,6 +2,8 @@
   width: 800px;
   background-color: #dcc9f4;
   text-align: center;
+  margin-top: 20px;
+  margin-bottom: 20px;
 }
 .top-child {
   background-color: #ffd9df;
