--- a/kadai_022/style.css
+++ b/kadai_022/style.css
@@ -53,11 +53,11 @@ footer {
   background-color: rgb(244,79,79);
   text-align: center;
 }
-a {
+a:link{
 color: rgb(255,255,255);
 
 }
-a:valid {
+a:visited {
 color:rgb(193,234,251);
 }
 a:hover {
